<resources>
    <string name="app_name">HealthyVita</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="field">Field</string>
    <string name="lorem">Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500\'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış,</string>
    <string name="forum">Forum</string>
    <string name="attachedImage">Görsel Eklendi</string>
    <string name="startConversation">Here you can choose the doctor you want to talk to.</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Already have an account? Sign in.</string>
    <string name="sign_in_button">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Don\'t have an account? Sign up.</string>
    <string name="email">Email</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="message">Message...</string>
    <string name="new_forum_message">New forum message...</string>
    <string name="sign_out">Sign Out</string>
    <string name="reminder">Daily Reminder</string>
    <string name="enter_a_room_name">Enter a room name...</string>
    <string name="audio">Audio</string>
    <string name="broadcast">Broadcast</string>
    <string name="join_call">Join Call</string>
    <string name="want_to_sign_out">Do you want to sign out?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="doctor">Doctor</string>
    <string name="healthcare_forum">Healthcare Forum</string>
    <string name="current_user">Current User</string>
    <string name="sheldon_cooper">Sheldon Cooper</string>
    <string name="patient">Patient</string>
    <string name="sheldoncooper_gmail_com">sheldoncooper@gmail.com</string>
    <string name="hi_how_are_you">Hi, how are you?</string>
    <string name="answers">Answers</string>

    <string name="patient_greeting">Here you can choose the doctor you want to talk to.</string>
    <string name="pending_messages">Your Pending Messages.</string>
    <string name="enter_mail_pass">Enter your email and password.</string>
    <string name="notification_on">Hourly notifications turned on.</string>
    <string name="notification_off">Hourly notifications are turned off.</string>
    <string name="password_confirm">Your passwords do not match.</string>
    <string name="video_call_off">Video call turned off.</string>




    <string-array name="Fields">
        <item>Gastroenterology</item>
        <item>Orthopedics </item>
        <item>Dermatology</item>
        <item>Psychiatry</item>
        <item>Family and General Practice</item>
    </string-array>
</resources>